<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout6"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/theme_background"
    tools:context=".view.AccountFragment">

    <EditText
        android:id="@+id/editProfileCurrency"
        style="@style/Widget.Material3.AutoCompleteTextView.OutlinedBox.Dense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="USD/VND"
        android:inputType="textPersonName"
        android:maxLength="3"
        android:textAlignment="textStart"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/avatarView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/avatarView"
        app:layout_constraintTop_toBottomOf="@+id/editProfileRate" />

    <CheckBox
        android:id="@+id/profileRemoteCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="11dp"
        android:text="I'm open for remote lessons"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editProfileZipcode" />

    <EditText
        android:id="@+id/editProfileZipcode"
        style="@style/Widget.Material3.TextInputEditText.OutlinedBox.Dense"
        android:layout_width="328dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="16dp"
        android:autoText="false"
        android:ems="10"
        android:hint="Zipcode"
        android:inputType="number"
        android:maxLength="5"
        android:minHeight="48dp"
        android:singleLine="true"
        android:textAlignment="viewStart"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editProfileName" />

    <EditText
        android:id="@+id/editProfileNumStudents"
        style="@style/Widget.Material3.TextInputEditText.OutlinedBox.Dense"
        android:layout_width="328dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="Maximum number of students"
        android:inputType="number"
        android:minHeight="48dp"
        android:singleLine="true"
        android:textAlignment="viewStart"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileRemoteCheckbox" />

    <TextView
        android:id="@+id/teachingSubjectsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="26dp"
        android:fontFamily="sans-serif-medium"
        android:text="Teaching Subjects"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editProfileNumStudents" />

    <TextView
        android:id="@+id/learningSubjectsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="26dp"
        android:fontFamily="sans-serif-medium"
        android:text="Learning Subjects"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/teachingSubjectsText" />

    <Button
        android:id="@+id/finishEditButton"
        style="@style/Widget.Material3.Button"
        android:layout_width="328dp"
        android:layout_height="54dp"
        android:layout_marginTop="26dp"
        android:text="Finish edit"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/learningSubjectsText" />

    <ImageView
        android:id="@+id/avatarView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="41dp"
        android:layout_marginTop="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/teachingSubjectsText"
        android:layout_width="328dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="16dp"
        android:text="Economics"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/teachingSubjectsLabel" />

    <TextView
        android:id="@+id/learningSubjectsText"
        android:layout_width="328dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="16dp"
        android:text="Art History"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/learningSubjectsLabel" />

    <EditText
        android:id="@+id/editProfileName"
        style="@style/Widget.Material3.AutoCompleteTextView.OutlinedBox.Dense"
        android:layout_width="328dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="Full name"
        android:inputType="textPersonName"
        android:textAlignment="viewStart"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/avatarView" />

    <EditText
        android:id="@+id/editProfileRate"
        style="@style/Widget.Material3.AutoCompleteTextView.OutlinedBox.Dense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="Rate per hour"
        android:inputType="numberDecimal"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/editProfileCurrency"
        app:layout_constraintStart_toStartOf="@+id/editProfileCurrency"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>