...
        android:text="Location details:"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.026"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editNumStudents" />

    <Button
        android:id="@+id/nextButton3"
        style="@style/Widget.Material3.Button"
        android:layout_width="328dp"
        android:layout_height="54dp"
        android:layout_marginBottom="96dp"
        android:text="Next"
        android:textSize="16sp"
...
        android:text="Maximum number of students:"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/editNumStudents"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editCurrency" />

    <EditText
        android:id="@+id/editRate"
        style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
        android:layout_width="156dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="41dp"
        android:layout_marginTop="11dp"
        android:layout_marginBottom="28dp"
...
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editCurrency" />

    <EditText
        android:id="@+id/editZipcode"
        style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
        android:layout_width="231dp"
        android:layout_height="65dp"
        android:layout_marginEnd="4dp"
        android:ems="10"
        android:hint="Zipcode"
...
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editRate"
        app:layout_constraintTop_toBottomOf="@+id/cueLabel7" />

    <CheckBox
        android:id="@+id/remoteCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="41dp"
        android:text="I'm open for remote lessons"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editZipcode" />
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/remoteCheckBox" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner" />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/nextButton3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
...
