...
        android:text="Learning Subjects"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/teachingSubjectsText" />

    <Button
        android:id="@+id/editProfileButton"
        style="@style/Widget.Material3.Button"
        android:layout_width="328dp"
        android:layout_height="54dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:text="Edit profile"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameLabel" />

    <ImageView
        android:id="@+id/avatarView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="41dp"
...
        android:textColor="@color/theme_purple_500"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/editProfileButton"
        app:layout_constraintTop_toBottomOf="@+id/avatarView" />

    <TextView
        android:id="@+id/rateLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="55dp"
        android:fontFamily="sans-serif-medium"
        android:text="100 USD"
...
        android:layout_marginTop="11dp"
        android:text="Slots available"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/remoteLabel" />

    <TextView
        android:id="@+id/zipCodeDisplayText"
        android:freezesText="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="41dp"
        android:fontFamily="sans-serif-black"
        android:text="12604"
        android:textAlignment="textEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editProfileButton" />

    <TextView
        android:id="@+id/remoteDisplayText"
        android:freezesText="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="41dp"
        android:fontFamily="sans-serif-black"
        android:text="Yes"
        android:textAlignment="textEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/zipCodeDisplayText" />

    <TextView
        android:id="@+id/numStudentsDisplayText"
        android:freezesText="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="41dp"
        android:fontFamily="sans-serif-black"
...
