<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout6"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/theme_background"
    tools:context=".view.SearchSubjectFragment">

    <!-- TODO: Update blank fragment layout -->

    <Spinner
        android:id="@+id/subjectSpinner"
        android:layout_width="379dp"
        android:layout_height="48dp"
        android:minHeight="32dp"
        app:layout_constraintBottom_toTopOf="@+id/levelSpinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/levelSpinner"
        android:layout_width="377dp"
        android:layout_height="48dp"
        android:layout_marginBottom="200dp"
        android:minHeight="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="Subject"
        app:layout_constraintBottom_toTopOf="@+id/subjectSpinner"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Your Level"
        app:layout_constraintBottom_toTopOf="@+id/levelSpinner"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/findTutor"
        style="@style/Widget.Material3.Button"
        android:layout_width="328dp"
        android:layout_height="54dp"
        android:text="Search"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/levelSpinner" />

</androidx.constraintlayout.widget.ConstraintLayout>